[gd_scene load_steps=17 format=2]

[ext_resource path="res://Asset/Button/close_button.png" type="Texture" id=1]
[ext_resource path="res://Asset/Level/Tutorial/tutorial_background.png" type="Texture" id=2]
[ext_resource path="res://Game/Interface/Tutorial/TutorialPopup.gd" type="Script" id=3]
[ext_resource path="res://Game/Common/Node/AnimatedButton/AnimatedButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asset/Button/next_tutorial_button.png" type="Texture" id=5]
[ext_resource path="res://Asset/Button/previous_tutorial_button.png" type="Texture" id=6]
[ext_resource path="res://Asset/Level/Tutorial/1_tutorial_before.png" type="Texture" id=7]
[ext_resource path="res://Asset/Level/Tutorial/tutorial_header.png" type="Texture" id=8]
[ext_resource path="res://Asset/Level/Window/tip_animation.png" type="Texture" id=9]
[ext_resource path="res://Resource/Tutorial/1Tutorial.tres" type="Resource" id=10]
[ext_resource path="res://Resource/Tutorial/3Tutorial.tres" type="Resource" id=11]
[ext_resource path="res://Resource/Tutorial/2Tutorial.tres" type="Resource" id=12]
[ext_resource path="res://Resource/Tutorial/4Tutorial.tres" type="Resource" id=13]
[ext_resource path="res://Game/Common/Node/Carousel/Carousel.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]
resource_name = "popup"
length = 0.666667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.466667, 0.666667 ),
"transitions": PoolRealArray( 2, 0.5, 2, 1 ),
"update": 0,
"values": [ -0.3, 0.55, 0.5, 0.55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.306, 0.466667, 0.666667 ),
"transitions": PoolRealArray( 2, 0.5, 2, 1 ),
"update": 0,
"values": [ -0.3, 0.55, 0.5, 0.55 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.306, 0.466668, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "tap"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Body/Image/Tap:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_change_statue"
} ]
}

[node name="TutorialPopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 1000 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
_animation_player = NodePath("Animation")
_tutorial_image = NodePath("Panel/Body/Image")
_tap = NodePath("Panel/Body/Image/Tap")
_carousel = NodePath("Panel/Body/Carousel")
_tutorial_resources = [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ) ]

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.470588, 0.470588, 0.588235, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = -0.3
anchor_right = 0.5
anchor_bottom = -0.3
margin_left = -175.0
margin_top = -250.0
margin_right = 175.0
margin_bottom = 250.0
rect_min_size = Vector2( 350, 500 )
rect_pivot_offset = Vector2( 175, 300 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="NinePatchRect" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = -55.0
margin_right = 70.0
margin_bottom = 20.0
rect_min_size = Vector2( 140, 75 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="Panel" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -35.0
margin_top = -15.0
margin_right = 10.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 1 )
_animation_player = NodePath("../CloseButton/Animation")

[node name="Body" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -200.0
margin_right = 125.0
margin_bottom = 200.0
rect_min_size = Vector2( 250, 400 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="NinePatchRect" parent="Panel/Body"]
margin_right = 250.0
margin_bottom = 285.0
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="Tap" type="NinePatchRect" parent="Panel/Body/Image"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 60 )
rect_scale = Vector2( 0.988889, 0.988889 )
rect_pivot_offset = Vector2( 20, 30 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carousel" parent="Panel/Body" instance=ExtResource( 14 )]
margin_top = 315.0
margin_right = 250.0
margin_bottom = 315.0
element_count = 4

[node name="Buttons" type="HBoxContainer" parent="Panel/Body"]
margin_top = 345.0
margin_right = 250.0
margin_bottom = 400.0
alignment = 1

[node name="PreviousButton" parent="Panel/Body/Buttons" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 55 )
rect_pivot_offset = Vector2( 27.5, 27.5 )
texture_normal = ExtResource( 6 )

[node name="Mock" type="NinePatchRect" parent="Panel/Body/Buttons"]
margin_left = 59.0
margin_right = 191.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="NextButton" parent="Panel/Body/Buttons" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 195.0
margin_top = 0.0
margin_right = 250.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 55 )
rect_pivot_offset = Vector2( 27.5, 27.5 )
texture_normal = ExtResource( 5 )
_animation_player = NodePath("../NextButton/Animation")

[node name="Animation" type="AnimationPlayer" parent="."]
anims/popup = SubResource( 1 )
anims/tap = SubResource( 2 )
[connection signal="gui_input" from="Background" to="." method="_on_background_input"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close"]
[connection signal="pressed" from="Panel/Body/Buttons/PreviousButton" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Panel/Body/Buttons/NextButton" to="." method="_on_next_pressed"]
